WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200317
UserMediaPermissionRequestManagerProxy should not use audio+video denied requests to deny audio-only or video-only requests
https://bugs.webkit.org/show_bug.cgi?id=200317
Summary
UserMediaPermissionRequestManagerProxy should not use audio+video denied requ...
youenn fablet
Reported
2019-07-31 14:38:43 PDT
UserMediaPermissionRequestManagerProxy should not use audio+video denied requests to deny audio-only or video-only requests
Attachments
Patch
(10.16 KB, patch)
2019-07-31 14:42 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(11.55 KB, patch)
2019-07-31 14:51 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews107 for mac-highsierra-wk2
(2.94 MB, application/zip)
2019-07-31 15:56 PDT
,
EWS Watchlist
no flags
Details
Patch
(17.21 KB, patch)
2019-07-31 16:36 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2019-07-31 14:42:01 PDT
Created
attachment 375248
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2019-07-31 14:44:04 PDT
<
rdar://problem/53781486
>
youenn fablet
Comment 3
2019-07-31 14:51:55 PDT
Created
attachment 375252
[details]
Patch
EWS Watchlist
Comment 4
2019-07-31 15:56:22 PDT
Comment on
attachment 375252
[details]
Patch
Attachment 375252
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/12843432
New failing tests: fast/mediastream/getUserMedia-deny-persistency3.html
EWS Watchlist
Comment 5
2019-07-31 15:56:23 PDT
Created
attachment 375263
[details]
Archive of layout-test-results from ews107 for mac-highsierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-highsierra-wk2 Platform: Mac OS X 10.13.6
Eric Carlson
Comment 6
2019-07-31 16:33:04 PDT
Comment on
attachment 375252
[details]
Patch r=me once the bots are happy
youenn fablet
Comment 7
2019-07-31 16:36:19 PDT
Created
attachment 375266
[details]
Patch
WebKit Commit Bot
Comment 8
2019-08-01 09:18:02 PDT
Comment on
attachment 375266
[details]
Patch Clearing flags on attachment: 375266 Committed
r248104
: <
https://trac.webkit.org/changeset/248104
>
WebKit Commit Bot
Comment 9
2019-08-01 09:18:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug